# library-cqrs

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: domain-description.md  glossary.md
src/catalogue/: database.py  main.py  models.py
src/lending/: __init__.py  book.py  checkout_service.py  create_db.sh  daily_sheet_service.py  domain.py  domain.toml  holding_service.py  patron.py  return_service.py
src/lending/app/: dailysheet.py
src/lending/app/patron/: checkout.py  hold.py
src/lending/model/: book.py  checkout_service.py  daily_sheet_service.py  holding_service.py  patron.py
src/lending/model/patron/: __init__.py  checkout.py  hold.py  patron.py
src/lending/patron/: aggregate.py
src/lending/utils/: db.py
src/shared/events/: __init__.py  book_instance_added.py
tests/: create_db.sh
tests/catalogue/: conftest.py
tests/catalogue/bdd/: test_catalogue.py  test_get_db.py
tests/catalogue/bdd/features/: add_book_instances.feature  add_new_books.feature
tests/catalogue/bdd/step_defs/: catalogue_steps.py
tests/catalogue/features/: add_book_instances.feature  add_new_books.feature
tests/lending/: conftest.py  factories.py
tests/lending/app/bdd/checkout_handlers/: test_checkouts.py
tests/lending/app/bdd/hold_handlers/: test_holds.py
tests/lending/bdd/additions/: test_additions.py
tests/lending/bdd/checkouts/features/: check_out_a_book.feature  checkout_duration.feature  overdue_checkouts.feature  return_a_book.feature
tests/lending/bdd/checkouts/step_defs/: checkout_steps.py
tests/lending/bdd/daily_sheet/: test_daily_sheet.py
tests/lending/bdd/daily_sheet/features/: checkouts_tracking.feature  expiring_holds_sheet.feature  overdue_checkouts_sheet.feature
tests/lending/bdd/holds/: test_holds.py
tests/lending/features/checkouts/: check_out_a_book.feature
tests/lending/features/holds/: open_and_close_ended_holds.feature
tests/lending/tdd/patron/: test_checkout_entity.py  test_hold_entity.py  test_patron_aggregate.py
(+25 files in other folders)
