[tool.poetry]
name = "lending"
version = "0.1.0"
description = "library - A Protean Application"
authors = ["Subhash Bhushan <subhash.bhushan@gmail.com>"]
readme = "README.md"
classifiers=[
    # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
packages = [
    { include = "lending", from = "src" },
    { include = "catalogue", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
# protean = {version = "0.12.1", extras=[] }
protean = { git = "https://github.com/proteanhq/protean.git", branch = "main" }
sqlalchemy = "^2.0.31"
fastapi = "^0.111.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
faker = "^25.4.0"
pytest = "^8.2.1"
pytest-bdd = "^7.1.2"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# TOOLING #

[tool.ruff.lint.isort]
known-first-party = ["lending"]
known-third-party = ["protean"]